--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="bg">
         <div id="contenitore">
             <div id="counter"> 
-            <div id="titolocounter">Number of Tom Cruise movies per capita:</div>
+            <div id="titolocounter">Increase or Decrease the number:</div>
             <h2 id="numerocounter" value="">0</h2>
           
             <button id="lower">Lower Count</button>
